src/App.css
:root {
  --bg-color: #EAC7C0;
  --div-color: #FFE7E7;
  --header-color: #703A57;
  --text-color: #6C6E72;
  --yellow: #F4C489;
  --blue: #6E82bf;
  --green: #bbba99;
  --orange: #f2ae80;
  --light-pink: #eac7c0;
  --dark-pink: #dd9293;
}

.App {
  text-align: center;
  background: url(./KIO-bg.png) no-repeat fixed;
  margin: 0 auto;
  max-width: 960px;
  overflow-x: hidden;
  overflow-y: hidden;
}

.App-logo {
  height: 300px;
  pointer-events: none;
}

.App-logo-text {
  margin-top: -32px;
}

.App-header {
  min-height: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}



.App-link {
  color: var(--blue);
}

@media only screen and (max-width: 767px) {
  body {
    background-image: url(./KIO-bg-media.png);
  }
}

